<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuAgregarCiudad"
        android:title="@string/lblMenuAddCity" />
    <item
        android:id="@+id/menuAbout"
        android:title="@string/lblMenuAbouUs" />
    <item
        android:id="@+id/menuCode"
        android:title="Ver Código">

        <menu>
            <group android:id="@+id/code_group">
                <item
                    android:id="@+id/menuCodigoMainActivity"
                    android:title="@string/lblmenuCodigoMainActivity" />
                <item
                    android:id="@+id/menuCodigoAgregarCiudad"
                    android:title="@string/lblmenuCodigoAgregarCiudad" />
                <item
                    android:id="@+id/menuCodigoTutorial"
                    android:title="@string/lblmenuCodigoTutorial" />
                <item
                    android:id="@+id/menuCodigoAbout"
                    android:title="@string/lblmenuCodigoTutorialAbout" />
            </group>
        </menu>
    </item>
</menu>